fixed: scrolling text overlapping issue. Changes font for logo/name

--- a/app/layout/Footer.css
+++ b/app/layout/Footer.css
@@ -1,36 +1,33 @@
-#Footer{
-    width:95%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 4rem 0;
+#Footer {
+  width: 95%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 4rem 0;
 }
 
 .nameEmail {
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
 }
 
-
-
-.name{
-    font-family: "Playwrite ES", cursive;
-    font-optical-sizing: auto;
-    font-size: 2.4rem;
-    font-weight: 400;
-    font-style: normal;
-    background: linear-gradient(90deg, #19eada, #14fdb1);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: transparent;    
+.footer-name {
+  font-family: "Warnes", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 3rem;
+  background: linear-gradient(90deg, #19eada, #14fdb1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 }
 
-.email{
-    font-size: 1.6rem;
-    padding: 0.5rem;
+.email {
+  font-size: 1.6rem;
+  padding: 0.5rem;
 }
 /* 
 .email:hover{
@@ -40,33 +37,32 @@
 } */
 
 #Footer > span {
-    color: #92a49e;
-    white-space: pre;
-    font-size: 1.4rem;
+  color: #92a49e;
+  white-space: pre;
+  font-size: 1.4rem;
 }
 
 .animated-underline {
-    /* display: inline-block; */
-    position: relative;
-    cursor: pointer;
+  /* display: inline-block; */
+  position: relative;
+  cursor: pointer;
 }
 
 .animated-underline::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    transform: scaleX(0);
-    background-color: #16eaa1;
-    transform-origin: bottom right;
-    transition: transform 0.1s ease-out;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  transform: scaleX(0);
+  background-color: #16eaa1;
+  transform-origin: bottom right;
+  transition: transform 0.1s ease-out;
 }
 
 .animated-underline:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-    transition-duration: 0.25s;
-
+  transform: scaleX(1);
+  transform-origin: bottom left;
+  transition-duration: 0.25s;
 }
